<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appcropid">000004</string>
    
    <string name="app_name_cn">储蓄罐</string>
    <string name="app_name">储蓄罐</string>
    <string name="ac_verfctpn">解锁密码</string>
    <string name="ac_lockSet">设置锁屏</string>
    <string name="ac_property">资产页面</string>
    <string name="lock_activity">锁屏</string>
    <string name="activity_set_lock_title">设置手势密码</string>
    <string name="setpattern">绘制解锁图案,至少连接4个点</string>
    <string name="setpatternreset">请重新设置手势</string>
    <string name="setpatternskip">跳过设置</string>
    <string name="forgetpattern">忘记手势密码?</string>
    <string name="setpatternagain">请再次绘制解锁图案</string>
    <string name="setpatternagainerror">与上次绘制不一致，请请重新绘制</string>
    <string name="setpatternlimiterror">最少连接四个点，请重新输入</string>
    <string name="action_settings">设置</string>
    <string name="action_refrush">刷新</string>
    <string name="action_success">完成</string>
    <string name="action_filter">筛选</string>
    <string name="hello_world">Hello world!</string>
    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="momountsavemoney">立即存钱</string>
    <string name="ExpectedIncome">预期年化收益</string>
    <string name="BeyondBankCurrent">超银行活期</string>
    <string name="Multiple">倍</string>
    <string name="SaveMoney">存钱</string>
    <string name="submit">确定</string>
    <string name="Withdrawals">取钱</string>
    <string name="AllIncome">累计收益(元)</string>
    <string name="yestodayIncome">最新收益(元)</string>
    <string name="noincome">赶快存钱去吧</string>
    <string name="totalAssets">总资产(元)</string>
    <string name="unincome">未到账收益(元)</string>
    <string name="qrnhsy">七日年化收益率%1s</string>
    <string name="wfsy">万份收益%1s</string>
    <string name="sum_un_op">笔交易待确认</string>
    <string name="userhowbuyaccountlogin">使用好买基金账户登录</string>
    <string name="savemoneyfrombank">支付银行</string>
    <string name="outmoneyfrombank">到账银行</string>
    <string name="savemoneynumber">存入金额</string>
    <string name="outmoneynumber">取款金额</string>
    <string name="suresave">存入</string>
    <string name="sureout">取出</string>
    <string name="usernamehint1">18位身份证号</string>
    <string name="usernamehint">身份证号</string>
    <string name="pwdhint">登录密码</string>
    <string name="pwdhint1">请输入登录密码</string>
    <string name="truepwd">真实姓名</string>
    <string name="forgetpwd">忘记登录密码？</string> 	
    <string name="loginhint">没有帐号？快来注册吧！！超级方便的现金理财工具，收益率赶超银行活期利率10倍。</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register10">10秒注册</string>
    <string name="phone">手机</string>
    <string name="phone1">手机号</string>
    <string name="verification">验证</string>
    <string name="verification1">验证</string>
    <string name="verification2">验证码</string>
    <string name="phonehint">请输入手机号</string>
    <string name="phonenewhint">请输入新手机号</string>
    <string name="verificationhint">请输入6位验证码</string>
    <string name="selfhint">请输入防钓鱼信息</string>
    <string name="accessemsver">获取短信验证码 ></string>
    <string name="next">下一步</string>
    <string name="youname">真实姓名</string>
    <string name="confirmpwd">确认密码</string>
    <string name="tpwd">交易密码</string>
    <string name="confirmregister">确认注册</string>
    <string name="confirmactive">确认激活</string>
    <string name="notlogin">您尚未登录</string>
    <string name="nothaveBank">您尚未绑定银行卡</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="gesture">手势密码</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="modifygesture">手势密码修改</string>
    <string name="modifyloginpwd">登录密码修改</string>
    <string name="modifytradepwd">交易密码修改</string>
    <string name="modifylogin">手机号修改</string>
    <string name="bankname">银行名称</string>
    <string name="bankno">银行账号</string>
    <string name="bankprovince">开户省份</string>
    <string name="bankbranch">开户支行</string>
    <string name="notloginout">登出</string>
    <string name="accountmanage">账户管理</string>
    <string name="soundmanage">音效开关</string>
    <string name="bindcard">绑定银行卡</string>
    <string name="tradequery">存取查询</string>
    <string name="startuse">立即赚钱</string>
    <string name="depositmanager">定存管理</string>
    <string name="notbandbank">未绑定银行卡</string>
    <string name="band">绑定</string>
    <string name="transactiondemand">交易查询</string>
    <string name="RelieveQuota">解除</string>
    <string name="setting">设置</string>
    <string name="newtradepwd">新交易密码</string>
    <string name="newloginpwd">新登录密码</string>
    <string name="newpwd">新密码</string>
    <string name="newpwdre"> 再次确认</string>
    <string name="suremodify"> 确认修改</string>
    <string name="surebind"> 确认绑定</string>
    <string name="pleaseselect">请选择</string>
    <string name="modifyphone">手机号修改</string>
    <string name="error_no_phone">手机号码不能为空</string>
    <string name="error_no_sms">短信验证码不能为空</string>
    <string name="startshouyidate">本次存入金额将于</string>
    <string name="startshouyidateend">产生收益</string>
    <string name="outshouyidate">该笔取款预计会在</string>
    <string name="outshouyidateend">打入您的银行卡</string>
    <string name="oneyearshouyi">未来一年期收益为：</string>
    <string name="bandprobmoelater">如遇银行问题，打款可能延迟一天</string>
    <string name="comparebankshouyi">同期银行收益为:</string>
    <string name="not_login_hint">点击登录储蓄罐 </string>
    <string name="not_login_hint1">立即赚钱</string>
    <string name="selectidnotype">请选择证件类型</string>
    <string name="selectmobile">请选择手机号</string>
    <string name="tab_trade_history">交易历史</string>
    <string name="tab_trade_income">每日估算收益</string>
    <string name="prefect">鉴权</string>
    <string name="trade_pwd_hint">请输入交易密码</string>
    <string name="trade_login_hint">请输入登录密码</string>
    <string name="hint_beyound">是活期收益的</string>
    <string name="hint_userpwd">6到12位字母与数字</string>
    <string name="hint_idcard18">请输入18位身份证</string>
    <string name="hint_tradepwd">6位不重复或不连续的数字</string>
    <string name="hint_username">请输入您的真实姓名</string>
    <string name="bankbranchsearch">支行搜索</string>
    <string name="callnumber"> 联系客服</string>
    <string name="active">账户激活</string>
    <string name="freefee">，免手续费</string>
    <string name="saveamount">存钱金额：</string>
    <string name="outamount">取钱金额：</string>
    <string name="shouyiamount">收益金额：</string>
    <string name="savedate">存钱日期：</string>
    <string name="outdate">取钱日期：</string>
    <string name="shouyidate">收益日期：</string>
    
    <string name="about_titile">储蓄罐是好买财富（/<a>了解好买/</a>）为用户打造的一款移动理财软件，产品有如下特色：</string>
    <string name="about_line1">赚的更多：</string>
    <string name="about_line1_1">现金管理利器，比银行收益高10倍</string>
    <string name="about_line2">操作简单：</string>
    <string name="about_line2_1">一键开户，一键存钱、取钱</string>
    <string name="about_line3">安全保障：</string>
    <string name="about_line3_1">银行、证监会监管，三重密码保障</string>
    <string name="copyright_2014">Copyright@2014  好买版权所有</string>
    <string name="drawtextpiggy">储蓄罐</string>
    <string name="drawtextqrnh">七日年化收益率</string>
    <string name="drawtextbank">银行活期收益率</string>
<!--Chinapay plugin begin-->
    <string name="cp_shanghu_name">商户名称:</string>
    <string name="cp_shangpin_name">商品描述:</string>
    <string name="cp_dingdan_money">订单金额:</string>
    <string name="cp_money_unit">元</string>
    <string name="cp_name">姓名:</string>
    <string name="cp_shenfen_type">证件类型:</string>
    <string name="cp_shenfen_info">身份信息</string>
    <string name="cp_zhengjian_number">证件号码:</string>
    <string name="cp_phone_hint">请输入您的手机号码(必填)</string>
    <string name="cp_phone">手机号码:</string>
    <string name="cp_email_hint">请输入您的邮箱(必填)</string>
    <string name="cp_email">电子邮箱:</string>
    <string name="cp_card_info">卡信息</string>
    <string name="cp_card_number">卡号:</string>
    <string name="cp_password_hint">请输入银行卡密码</string>
    <string name="cp_ok">确定</string>
    <string name="cp_cancel">取消</string>
    <string name="cp_back2shanghu">返回商户</string>
    <string name="cp_faile_reason">失败原因:</string>
    <string name="cp_oauth_failed">认证失败</string>
    <string name="cp_oauth_sucess">认证成功</string>
    <string name="cp_pay_failed">支付失败</string>
    <string name="cp_pay_sucess">支付成功</string>
    <string name="cp_loading">初始化,请稍后</string>
   <!--  <string name="cp_version">版本</string>
    <string name="cp_right">上海银联电子支付服务有限公司 版权所有</string> -->
    <string name="cp_dingdan_number">订单编号:</string>
    <string name="cp_dingdan_time">订单时间:</string>
    <string name="cp_company_info">公司介绍</string>
    <string name="cp_support_bank">支持银行</string>
    <string name="cp_sujestion">意见反馈</string>
    <string name="cp_version_2">版本号</string>
    <string name="cp_tel_1">客服电话</string>
    <string name="cp_tel_2">95534</string>
    <string name="cp_tel_2_1">-6</string>
    <string name="cp_tel_3">(转互联网业务)</string>
    <string name="cp_sujestion_info_1">\t\t欢迎您提出宝贵的意见，您留下的每个字都将用来改善我们的软件。</string>
    <string name="cp_sujestion_info_2">\t\t如有各类使用咨询请直接拨打95534-6转互联网业务。</string>
    <string name="cp_sujestion_hint">请输入您的反馈意见...(500字内)</string>
    <string name="cp_support_bank_info">支持的全国性银行</string>
    <string name="cp_sujestion_hint_phone">请输入您的手机号码</string>
    <string name="cp_card_type_0">借记卡</string>
    <string name="cp_card_type_1">信用卡</string>
    <string name="cp_btn_submit">提交</string>
    <string name="cp_reason_unknow">未知</string>
    <string name="cp_youxiaoqi_hint">请输入有效期</string>
    <string name="cp_cvn2_hint">CVN2</string>
    <string name="cp_et_name_hint">请输入您的姓名</string>
    <string name="cp_et_idtype_hint">请输入您的证件类型</string>
    <string name="cp_et_idNo_hint">请输入您的证件号码</string>
    <string name="cp_et_pan_hint">请输入您的卡号</string>
    <string name="cpay_keyboard_clear">清除</string>
    <string name="cpay_keyboard_number">数字</string>
    <string name="cpay_keyboard_letter">字母</string>
    <string name="cpay_keyboard_symbol">符号</string>
    <!--Chinapay plugin end-->
    
    <string name="sure">确认</string>
    <string name="cancle">取消</string>
    <string name="retry">立即重绑</string>
     <string name="bindcardsuccess">恭喜你，绑卡成功！</string> 
     <string name="bindcardfail">绑卡失败！</string> 
     <string name="vrfycardfail">验卡失败！</string> 
     <string name="todo">TODO</string> 
     <string name="notlogin_qrnhis">七日年化收益率为</string> 
     <string name="income_title">%1s最新收益（元）</string>      
     
     <string name="share_weixin" >微信</string>
    <string name="share_weixin_circle" >朋友圈</string>
    <string name="share_weibo" >新浪微博</string>
    <string name="share_more" >更多</string>
    <string name="step_cnacle" >取消</string>
</resources>