<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content">

	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">

		<include layout="@layout/lay_notify"/>


		<LinearLayout  android:layout_marginTop="@dimen/activity_vertical_margin_os7_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">

			<RelativeLayout style="@style/piggy_input_lay" android:layout_marginTop="0dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true" android:paddingTop="0dp" android:gravity="center_vertical" android:orientation="horizontal">

				<TextView android:id="@+id/username" android:visibility="visible" style="@style/piggy_intput_lefttext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:gravity="center" android:text="@string/usernamehint"/>

				<howbuy.android.piggy.widget.ClearableEdittext android:id="@+id/idNo" style="@style/piggy_intput" android:hint="@string/hint_idcard18" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@+id/username" android:background="@drawable/edit_bg" android:digits="1234567890xX" android:inputType="textEmailAddress"/>
			</RelativeLayout>



			<RelativeLayout android:layout_marginTop="@dimen/os7_item_spirt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true" style="@style/piggy_input_lay" android:gravity="center_vertical" android:orientation="horizontal">

				<TextView android:id="@+id/pwd" android:visibility="visible" style="@style/piggy_intput_lefttext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:gravity="center" android:text="@string/pwdhint"/>

				<howbuy.android.piggy.widget.ClearableEdittext android:id="@+id/user_pwd" style="@style/piggy_intput" android:hint="@string/hint_userpwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@+id/pwd" android:background="@drawable/edit_bg" android:inputType="textPassword"/>
<!--                         android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/username"
                        android:background="@drawable/edit_bg"
                        android:hint="@string/hint_tradepwd"
                        android:inputType="number"  -->
			</RelativeLayout>
		</LinearLayout>

		<howbuy.android.piggy.widget.ImageTextBtn style="@style/piggy_text_button" android:id="@+id/submit_btn" android:enabled="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:background="@drawable/btn_sure_bg" android:text="@string/login"/>

		<TextView android:layout_marginRight="15dp" android:id="@+id/forgetpwd" android:textColor="@color/text_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_gravity="right" android:text="@string/forgetpwd"/>
	</LinearLayout>
</ScrollView>

