<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin_os7_top"
            android:layout_height="wrap_content"
            android:orientation="vertical">
			  <include layout="@layout/mobilever_lay"/>
          

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:background="@drawable/content_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp" >

                    <TextView
                        style="@style/piggy_intput_lefttext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/verification" />

                    <howbuy.android.piggy.widget.ClearableEdittext
                        style="@style/piggy_intput"
                        android:inputType="textEmailAddress"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_bg"
                        android:hint="@string/verificationhint" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

              
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    style="@style/piggy_input_lay"
                    >

                    <TextView
                        android:id="@+id/pwd"
                        style="@style/piggy_intput_lefttext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/tpwd" />

                    <howbuy.android.piggy.widget.ClearableEdittext
                        android:id="@+id/trade_pwd"
                        style="@style/piggy_intput"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword" 
                        android:hint="@string/hint_tradepwd"
                        android:layout_toRightOf="@+id/pwd"
                        android:background="@drawable/edit_bg" />
                </RelativeLayout>
            </LinearLayout>

            <howbuy.android.piggy.widget.ImageTextBtn style="@style/piggy_text_button"
                android:id="@+id/submit_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_sure_bg"
                android:clickable="true"
                android:text="@string/suremodify" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>