<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_marginTop="@dimen/activity_vertical_margin_os7_top"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:background="@drawable/setting_top_bg"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/username"
                        style="@style/piggy_intput_lefttext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/youname" />

                    <howbuy.android.piggy.widget.ClearableEdittext
                        android:id="@+id/user_name"
                        style="@style/piggy_intput"
                        android:hint="@string/hint_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/username"
                        android:background="@drawable/edit_bg" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginTop="@dimen/os7_item_spirt"
                       android:background="@drawable/setting_item_bg"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/pwd"
                        style="@style/piggy_intput_lefttext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/usernamehint" />

                    <howbuy.android.piggy.widget.ClearableEdittext
                        android:id="@+id/user_no"
                        style="@style/piggy_intput"
                        android:hint="@string/hint_idcard18"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/pwd"
                        android:digits="1234567890xX"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edit_bg" />
                </RelativeLayout>
            </LinearLayout>
			  <include  layout="@layout/mobilever_lay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/os7_item_spirt"/>
           

            <howbuy.android.piggy.widget.ImageTextBtn style="@style/piggy_text_button"
                android:id="@+id/submit_btn"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_sure_bg"
                android:clickable="true"
                      android:text="@string/next"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>